--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+  height: 100%;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #F8FBEF;
+}
+
+#root {
+  background-color: #F8FBEF;
+  width: 100%;
+  max-width: 320px;
+  margin: 0 auto;
+  height: 80%;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(118,186,153,1);
+  padding-bottom: 10px;
 }
